# flask-cookiecutter-vue3

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: MANIFEST.in  index.html  package.json  pyproject.toml  setup.cfg  vite.config.js
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}_web/: index.html  package.json  vite.config.js
