[metadata]
name = {{cookiecutter.project_name}}
version = {{cookiecutter.version}}

[options]
packages = find_namespace:
include_package_data = True
install_requires =
    Flask
    {%- if cookiecutter.using_sqlalchemy %}
    SQLAlchemy
    Flask-SQLAlchemy
    {%- endif %}
    {%- if cookiecutter.using_cerberus %}
    Cerberus
    {%- endif %}
    {%- for item in cookiecutter.dependencies.strip().split(",") %}
    {{ item.strip() }}
    {%- endfor %}

[options.packages.find]
include = {{cookiecutter.project_name}}

[options.extras_require]
testing =
    {%- if cookiecutter.using_pytest %}
    pytest
    coverage
    pytest-cov
    {%- endif %}
    {%- for item in cookiecutter.testing_dependencies.strip().split(",") %}
    {{ item.strip() }}
    {%- endfor %}
develop =
    nodeenv
    {%- if cookiecutter.using_pytest %}
    pytest
    coverage
    pytest-cov
    {%- endif %}
    {%- for item in cookiecutter.testing_dependencies.strip().split(",") %}
    {{ item.strip() }}
    {%- endfor %}
